<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvWelcomeBack"
        android:layout_width="278dp"
        android:layout_height="76dp"
        android:layout_marginTop="92dp"
        android:text="Enter your information (1/3)"
        android:textColor="#000000"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/FirstNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="@drawable/white_curvy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcomeBack">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/FirstNameEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/white_curvy"
            android:textColor="@color/black"

            android:hint="@string/first_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/LastNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/LastNameEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/white_curvy"
            android:textColor="@color/black"

            android:hint="@string/last_name"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/SexInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_curvy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LastNameInputLayout">

        <AutoCompleteTextView
            android:id="@+id/SexAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:hint="@string/sex"
            android:editable="false"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/birthdayInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/white_curvy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SexInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthdayEditText"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:background="@drawable/white_curvy"
            android:textColor="@color/black"

            android:hint="@string/birthday"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginTop="32dp"
        android:layout_marginLeft="60px"
        android:layout_marginRight="60px"
        android:background="@drawable/heavy_green_button"
        android:text="@string/next"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birthdayInputLayout" />



</androidx.constraintlayout.widget.ConstraintLayout>
